--- a/PMSP/Views/User/Index.cshtml
+++ b/PMSP/Views/User/Index.cshtml
@@ -20,6 +20,7 @@
     <div class="card-body">
         <div class="table-responsive">
             <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
+                <!--  @ViewBag.message  u can bring any data with this -->
                 <thead>
                     <tr>
                         <th>Image</th>
@@ -38,21 +39,24 @@
                 <tbody>
 
                     @*@for (int index = 0; index < Model.Count; index++)
-                        {
-                            var user = Model[index];
-                            <tr>
-                                <td>@(user.FirstName + " " + user.LastName)</td>
-                                <td>@user.Email</td>
-                                <td>@Convert.ToDateTime(user.DOB).ToShortDateString()</td>
-                                <td>@(user.Gender == 1 ? "Male" : "FeMale")</td>
-                                <td>@user.Role.Title</td>
-                            </tr>
-                        }*@
+            {
+                var user = Model[index];
+                <tr>
+                    <td>@(user.FirstName + " " + user.LastName)</td>
+                    <td>@user.Email</td>
+                    <td>@Convert.ToDateTime(user.DOB).ToShortDateString()</td>
+                    <td>@(user.Gender == 1 ? "Male" : "FeMale")</td>
+                    <td>@user.Role.Title</td>
+                </tr>
+            }*@
 
                     @foreach (var user in Model)    //if we are using view bag methodology then we need to give view bag parametre here its users, if we are using view data methodology then we need to give  vusers parameter, in this loop  insted of Model in both cases
                     {
+                        var image = user.FileInfo != null ? Convert.ToBase64String(user.FileInfo) : null;
+                        var imgSrc = image != null ? String.Format("data:image/gif;base64,{0}", image) : "";
                         <tr>
-                            <td> </td>
+                            @*<td><img src="@Url.Content("~/Files/" + user.ImagePath)" style="height:50px;" /></td>*@
+                            <td><img src="@imgSrc" style="height:50px;" /></td>
                             <td>@(user.FirstName + " " + user.LastName)</td>
                             <td>@user.Email</td>
                             <td>@Convert.ToDateTime(user.DOB).ToShortDateString()</td>
@@ -61,12 +65,12 @@
                             <td>
                                 @(user.Role_Id != null ? user.Role.Title : "")
                                 @*@{
-                                    try
-                                    {
-                                             @user.Role.Title;
-                                    }
-                                        catch (Exception ex)
-                                        {*@
+                        try
+                        {
+                                 @user.Role.Title;
+                        }
+                            catch (Exception ex)
+                            {*@
                             </td>
                             <td>
                                 @if (permissions.Any(p => p.Module != null && p.Module.ModuleName == "Users" && p.CanDelete))
@@ -86,6 +90,6 @@
             </table>
         </div>
     </div>
-    <div class="card-footer small text-muted">Updated yesterday at 11:59 PM</div>
+    <div class="card-footer small text-muted"> </div>
 </div>
 
